--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
 	<script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
 	
-	<script type="text/javascript" src="iscaring.js"></script>
-	<!--<script type="text/javascript" src="iscaring.min.js"></script>-->
+	<script type="text/javascript" src="sharingiscaring.js"></script>
+	<!--<script type="text/javascript" src="sharingiscaring.min.js"></script>-->
 	
 	<script type="text/javascript" src="app.js"></script>
 	
