Code example equal to test example now

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -15,7 +15,10 @@
         <sic-facebook-og-share og-action-type="angular-sic:test" og-object-key="sharing_is_caring"
                                og-object-value="https://akoten.github.io/sharingiscaring"
                                anchor-element-content="Test it!"
-                               og-url="https://akoten.github.io/sharingiscaring"></sic-facebook-og-share>
+                               og-url="https://akoten.github.io/sharingiscaring"
+                               og-title="Sharing is caring is awesome!"
+                               og-description="And so are you."
+                               og-type="angular-sic:sharing_is_caring"></sic-facebook-og-share>
     </div>
     <div>
         <sic-facebook-og-share og-action-type="angular-sic:test" og-object-key="sharing_is_caring"
